10/blue-green/passage-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: passage-webapp-svc-v1
  labels:
    app.kubernetes.io/part-of: blue-green-demo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector: # Note here that we match both the app and the version
    app.kubernetes.io/name: passage-webapp
    app.kubernetes.io/version: v1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passage-deploy-v1
  labels:
    app.kubernetes.io/part-of: blue-green-demo
spec:
  replicas: 5
  selector: 
    matchLabels:
      app.kubernetes.io/name: passage-webapp
      app.kubernetes.io/version: v1.0.0     
  template:
    metadata:
      labels:
        app.kubernetes.io/name: passage-webapp
        app.kubernetes.io/version: v1.0.0
    spec:
      containers:
      - name: webapp-ctr
        image: k8smaestro/web-app:1.0
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 5
