10/blue-green/web-api-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-svc-v2
  labels:
    app.kubernetes.io/part-of: blue-green-demo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: weather-api
    app.kubernetes.io/version: v2.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapi-deploy-v2
  labels:
    app.kubernetes.io/part-of: blue-green-demo
spec:
  replicas: 3
  selector: 
    matchLabels:
      app.kubernetes.io/name: weather-api
      app.kubernetes.io/version: v2.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weather-api
        app.kubernetes.io/version: v2.0.0
    spec:
      containers:
      - name: webapp-ctr
        image: k8smaestro/web-api:2.0 ## zrobić taki obraz w wersji 2.0
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          periodSeconds: 5
